src/xdrfile.h

  /*! \brief Abstract datatype for an portable binary file handle
   *
   *  This datatype essentially works just like the standard FILE type in C.
   *  The actual contents is hidden in the implementation, so you can only
   *  define pointers to it, for use with the xdrfile routines.
   *
   *  If you \a really need to see the definition it is in xdrfile.c, but you
   *  cannot access elements of the structure outside that file.
   *
   *  \warning The implementation is completely different from the C standard
   *  library FILE, so don't even think about using an XDRFILE pointer as an
   *  argument to a routine that needs a standard FILE pointer.
   */
  typedef struct XDRFILE XDRFILE;
  enum { exdrOK, exdrHEADER, exdrSTRING, exdrDOUBLE,
       exdrINT, exdrFLOAT, exdrUINT, exdr3DX, exdrCLOSE, exdrMAGIC,
       exdrNOMEM, exdrENDOFFILE, exdrFILENOTFOUND, exdrNR };
  extern char *exdr_message[exdrNR];
  /*! \brief Open a portable binary file, just like fopen()
   *
   *  Use this routine much like calls to the standard library function
   *  fopen(). The only difference is that the returned pointer should only
   *  be used with routines defined in this header.
   *
   *  \param path  Full or relative path (including name) of the file
   *  \param mode  "r" for reading, "w" for writing, "a" for append.
   *
   *  \return Pointer to abstract xdr file datatype, or NULL if an error occurs.
   *
   */
  XDRFILE *
  xdrfile_open    (const char *    path,
           const char *    mode);
  /*! \brief Close a previously opened portable binary file, just like fclose()
   *
   *  Use this routine much like calls to the standard library function
   *  fopen(). The only difference is that it is used for an XDRFILE handle
   *  instead of a FILE handle.
   *
   *  \param xfp  Pointer to an abstract XDRFILE datatype
   *
   *  \return     0 on success, non-zero on error.
   */
  int
  xdrfile_close   (XDRFILE *       xfp);
    int xdr_seek(XDRFILE *xd, int64_t pos, int whence);