src/xdrfor.f90


    ! Moves XDRFILE position to the specified offset from whence.
    ! NOTE: This uses C based indexing (0, 1, 2, ...)
    integer(C_INT) function xdr_seek( xd, offset, whence ) bind( C, NAME="xdr_seek" )
      import
      type(xdrfile), intent(in)             :: xd     ! Pointer to an abstract XDRFILE datatype.
      integer(C_INT64_T), value, intent(in) :: offset ! Position offset
      integer(C_INT), value, intent(in)     :: whence ! Origin of offset: 0 = SEEL_BEG, 1 = SEEK_CUR, 2 = SEEK_END
    end function xdr_seek

    ! Open a portable binary file, just like fopen()
    ! * Returns pointer to abstract xdr file datatype, or NULL if an error occurs.
    type(C_PTR) function xdrfile_open( file, mode ) bind( C, NAME="xdrfile_open" )
      import
      character(C_CHAR), intent(in) :: file(*) ! Full or relative path (including name) of the file
      character(C_CHAR), intent(in) :: mode(*) ! "r" for reading, "w" for writing, "a" for append.
    end function xdrfile_open

    ! Close a previously opened portable binary file, just like fclose()
    ! * Returns 0 on success, non-zero on error.
    integer(C_INT) function xdrfile_close( xd ) bind( C, NAME="xdrfile_close" )
      import
      type(xdrfile), intent(in) :: xd ! Pointer to an abstract XDRFILE datatype.
    end function xdrfile_close
  end interface

contains

! xdrfile code to error message
function exdr_message( errnum )
  implicit none
  character(:), allocatable :: exdr_message
  integer, intent(in)       :: errnum

  select case( errnum )
  case( exdrOK )
    exdr_message = "OK"
  case( exdrHEADER )
    exdr_message = "Header"
  case( exdrSTRING )
    exdr_message = "String"
  case( exdrDOUBLE )
    exdr_message = "Double"
  case( exdrINT )
    exdr_message = "Integer"
  case( exdrFLOAT )
    exdr_message = "Float"
  case( exdrUINT )
    exdr_message = "Unsigned integer"
  case( exdr3DX )
    exdr_message = "Compressed 3D coordinate"
  case( exdrCLOSE )
    exdr_message = "Closing file"
  case( exdrMAGIC )
    exdr_message = "Magic number"
  case( exdrNOMEM )
    exdr_message = "Not enough memory"
  case( exdrENDOFFILE )
    exdr_message = "End of file"
  case( exdrFILENOTFOUND )
    exdr_message = "File not found"
  case default
    exdr_message = "???"
  end select

  return
end function exdr_message

end module xdrfor
